change footer and header color to fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,14 @@
 .header-grid {
     display: grid;
     grid-template-columns: auto 1fr;
-    background-color: #3377aa;
+    background-color: #214D6E;
     border-radius: 20px;
     align-items: center;
     box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.35);
 }
 
 .footer-text {
-    background-color: #3377aa;
+    background-color: #214D6E;
     margin-top: 40px;
     border-radius: 20px;
     align-items: center;
